--- a/MissedConnections/app/src/main/AndroidManifest.xml
+++ b/MissedConnections/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
 
         <activity
             android:name=".AddConnectionActivity"
-            android:label="@string/title_activity_add_connection" />
+            android:label="@string/title_activity_add_connection"
+            android:windowSoftInputMode="stateHidden" />
     </application>
 
 </manifest>
